Issue#449: Clicking on Delete in Courses should show a proper message

--- a/init_docs/languages/English.txt
+++ b/init_docs/languages/English.txt
@@ -822,5 +822,6 @@
   "Nation_Visible":"Nation is visible",
   "Nation_InVisible":"Nation is not visible",
   "delete_alert": "Are you sure you want to upload this resource?",
-  "Resource_Already_At_Nation": "Resource is already at Nation"
+  "Resource_Already_At_Nation": "Resource is already at Nation",
+  "Confirm_Course":"Are you sure you want to delete this Course?",
 }
